--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = LPC1768
 include_dir  = Marlin
 extra_configs =
     ini/avr.ini
@@ -241,6 +241,7 @@ default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
 #
 [env]
 framework     = arduino
+upload_port   = F:\\
 extra_scripts = ${common.extra_scripts}
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
